# data.medical-wisdom

./: .gitattributes  .gitignore  AGENTS.md  SPEC.md  all_consumer_health_questions.jsonl  all_consumer_health_questions.pass2.jsonl  aws_utils.py  cli_utils.py  entities.py  generator.py  main.py  pass2_watchdog.sh  pipeline_config.py  pipeline_io.py  pipeline_runner.py  pipeline_validation.py  pyproject.toml  reward_score.ipynb  samples.py  utils.py
extractors/: __init__.py  health_search_qa.py  liveqa_med.py  mash_qa.py  medication_qa.py  mediqa_qa.py  medquad.py  medredqa.py
