[project]
name = "data-medical-wisdom"
version = "0.1.0"
description = "Local notebook environment for the medical reward score playground."
readme = "SPEC.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
]

[tool.uv]
package = false
